# OSS

./: .clang-format  CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/compile-interfaces/compile-options-private/: CMakeLists.txt
libs/compile-interfaces/compile-options-public/: CMakeLists.txt
libs/oss/: CMakeLists.txt  OSSConfig.cmake
libs/oss/include/oss/: window.h
libs/oss/src/: window.cpp
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt
src/tests/: CMakeLists.txt
